The source code in next report is completely valid source code but GCC 5.0.0 rejects to compile it. Older version of GCC can compile this. I tested this in Ubuntu but I've got the same report in fedora from other user. If I change the type of varaible 'a' to int from const int, or make the test function non-template, it can be compiled. ------------------------------------------------------------------------------- the exact version of GCC 5.0.0 20150329 (experimental) [trunk revision 221764] (Ubuntu 5-20150329-1ubuntu11~14.04) the system type x86_64-linux-gnu the options given when GCC was configured/built Configured with: ../src/configure -v --with-pkgversion='Ubuntu 5-20150329-1ubuntu11~14.04' --with-bugurl=file:///usr/share/doc/gcc-5/README.Bugs --enable-languages=c,ada,c++,java,go,fortran,objc,obj-c++ --prefix=/usr --program-suffix=-5 --enable-shared --enable-linker-build-id --libexecdir=/usr/lib --without-included-gettext --enable-threads=posix --with-gxx-include-dir=/usr/include/c++/5 --libdir=/usr/lib --enable-nls --with-sysroot=/ --enable-clocale=gnu --enable-libstdcxx-debug --enable-libstdcxx-time=yes --with-default-libstdcxx-abi=c++98 --enable-gnu-unique-object --disable-vtable-verify --enable-libmpx --enable-plugin --with-system-zlib --disable-browser-plugin --enable-java-awt=gtk --enable-gtk-cairo --with-java-home=/usr/lib/jvm/java-1.5.0-gcj-5-amd64/jre --enable-java-home --with-jvm-root-dir=/usr/lib/jvm/java-1.5.0-gcj-5-amd64 --with-jvm-jar-dir=/usr/lib/jvm-exports/java-1.5.0-gcj-5-amd64 --with-arch-directory=amd64 --with-ecj-jar=/usr/share/java/eclipse-ecj.jar --enable-objc-gc --enable-multiarch --disable-werror --with-arch-32=i686 --with-abi=m64 --with-multilib-list=m32,m64,mx32 --enable-multilib --with-tune=generic --enable-checking=yes --build=x86_64-linux-gnu --host=x86_64-linux-gnu --target=x86_64-linux-gnu the complete command line that triggers the bug g++-5 -std=c++11 test.cpp the compiler output (error messages, warnings, etc.) test.cpp: In instantiation of 'test(T)::<lambda()> [with T = int]': test.cpp:5:7: required from 'struct test(T) [with T = int]::<lambda()>' test.cpp:5:28: required from 'void test(T) [with T = int]' test.cpp:9:11: required from here test.cpp:5:27: error: redeclaration of 'const int& a' [&] () { return a, a; }(); ^ test.cpp:5:27: note: 'const int& a' previously declared here test.cpp: In instantiation of 'void test(T) [with T = int]': test.cpp:9:11: required from here test.cpp:5:5: sorry, unimplemented: non-trivial designated initializers not supported [&] () { return a, a; }(); the preprocessed file (*.i*) that triggers the bug # 1 "test.cpp" # 1 "<built-in>" # 1 "<command-line>" # 1 "/usr/include/stdc-predef.h" 1 3 4 # 1 "<command-line>" 2 # 1 "test.cpp" template<class T> void test(T b) { const int a = b; [&] () { return a, a; }(); } int main() { test(1); return 0; }
*** Bug 65885 has been marked as a duplicate of this bug. ***
*** Bug 66374 has been marked as a duplicate of this bug. ***
Author: jason Date: Fri Jun 19 18:15:24 2015 New Revision: 224676 URL: https://gcc.gnu.org/viewcvs?rev=224676&root=gcc&view=rev Log: PR c++/65843 * pt.c (tsubst_copy_and_build): Register a capture proxy in local_specializations. Added: trunk/gcc/testsuite/g++.dg/cpp0x/lambda/lambda-rep1.C Modified: trunk/gcc/cp/ChangeLog trunk/gcc/cp/pt.c
Author: jason Date: Fri Jun 19 18:24:18 2015 New Revision: 224681 URL: https://gcc.gnu.org/viewcvs?rev=224681&root=gcc&view=rev Log: PR c++/65843 * pt.c (tsubst_copy_and_build): Register a capture proxy in local_specializations. Added: branches/gcc-5-branch/gcc/testsuite/g++.dg/cpp0x/lambda/lambda-rep1.C Modified: branches/gcc-5-branch/gcc/cp/ChangeLog branches/gcc-5-branch/gcc/cp/pt.c
Fixed for 5.2.