re PR c++/65843 (multiple use of const variable in lamba in template function causes compile error)

PR c++/65843
	* pt.c (tsubst_copy_and_build): Register a capture proxy in
	local_specializations.

From-SVN: r224681